# coolify_logs

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  coolify_api.py  coolify_db.py  database.py  docker_client.py  main.py  models.py  rate_limit.py
app/routers/: admin.py  admin_api.py  api.py
app/templates/: admin_index.html  admin_keys.html  admin_keys_partial.html  admin_login.html  base.html  error.html  index.html  logs.html
cli/: logcli.py
loggateway_cli/: main.py
logify_cli/: main.py
