[project]
name = "log-gateway"
version = "0.1.0"
description = "Docker Log Gateway CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0,<1",
  "rich>=13.7.0,<14",
  "httpx>=0.27.0",
  "websockets>=13.0,<16",
]

[project.scripts]
logify = "logify_cli.main:main"

[tool.setuptools]
packages = ["logify_cli"]
